online-sunglass-store-app/src/card.css
.container h1 {
    text-align: center;
}

.main {
    padding: 5rem 0;
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.grid {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    max-width: 100%;
    margin-top: 3rem;
}

@media (max-width: 400px) {
    .grid {
        width: 100%;
        flex-direction: column;
    }
} 

a {
    color: black;
    text-decoration: none;
}

a:hover{
    color: whitesmoke;
    border: thin solid rgb(248, 248, 185);
    padding: .2em;
    background-color: black;
}

.snipcart * {
    margin:10px;
}

